# selfcord

./: MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  test.yml
docs/: Makefile  api.rst  conf.py  faq.rst  index.rst  intro.rst  logging.rst  make.bat  migrating.rst  migrating_from_dpy.rst  quickstart.rst  token.rst  whats_new.rst
docs/_static/: scorer.js  style.css
docs/_templates/: genindex.html  layout.html
docs/ext/commands/: api.rst  cogs.rst  commands.rst  extensions.rst  index.rst
docs/ext/tasks/: index.rst
examples/: background_task.py  background_task_asyncio.py  basic_bot.py  basic_voice.py  converters.py  custom_context.py  deleted.py  edits.py  guessing_game.py  new_member.py  reaction_roles.py  reply.py  secret.py
selfcord/: abc.py  calls.py  channel.py  client.py  embeds.py  emoji.py  enums.py  errors.py  flags.py  guild.py  invite.py  member.py  message.py  player.py  scheduled_event.py  threads.py  user.py  utils.py
selfcord/ext/commands/: __init__.py  bot.py  cog.py  context.py  converter.py  cooldowns.py  core.py  errors.py  flags.py  help.py  parameters.py
selfcord/ext/tasks/: __init__.py
selfcord/types/: integration.py
selfcord/webhook/: async_.py  sync.py
tests/: test_ext_tasks.py  test_files.py  test_utils.py
